--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 /* Styling for the main container */
-.container {
+main {
   background-color: hsl(244, 38%, 16%); /* Set background color */
   position: absolute;
   top: 50%;
@@ -36,7 +36,7 @@ body {
 }
 
 /* Styling for the image section of the container */
-.container .pic {
+main .pic {
   display: flex;
   position: absolute;
   right: 0;
@@ -49,7 +49,7 @@ body {
 }
 
 /* Overlay effect for the image */
-.container .pic::before {
+main .pic::before {
   content: "";
   position: absolute;
   top: 0;
@@ -63,7 +63,7 @@ body {
 }
 
 /* Styling for the image */
-.container .pic img {
+main .pic img {
   width: 100%; /* Set image width to 100% */
   height: auto; /* Maintain image aspect ratio */
   user-select: none; /* Disable text selection */
@@ -93,7 +93,7 @@ h1 span {
 }
 
 /* Styling for the subtitle */
-h5 {
+h4 {
   color: hsla(0, 0%, 100%, 0.75); /* Set text color */
   font-family: "inter", sans-serif; /* Use inter font family */
   font-weight: 400; /* Set font weight */
@@ -149,7 +149,7 @@ h5 {
 }
 
 /* Styling for the attribution section */
-.attribution {
+footer {
   font-size: 11px; /* Set font size */
   text-align: center; /* Align text to the center */
   color: rgba(255, 255, 255, 0.522); /* Set text color */
@@ -162,7 +162,7 @@ h5 {
 }
 
 /* Styling for the attribution links */
-.attribution a {
-  color: hsla(277, 64%, 61%, 0.758); /* Set link color */
+footer a {
+  color: hsla(65, 86%, 54%, 0.758); /* Set link color */
   text-decoration: none; /* Remove underline */
 }
